--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,19 @@ Base Styles
 	box-sizing: border-box;
 }
 
+body {
+	-webkit-font-smoothing: antialiased;
+	 font-family: 'Open Sans';
+	 text-align: center;
+}
 
 /* ----------------------------------------
 Typography
 ------------------------------------------- */
-
+h1 {
+	font-family: "Oswald";
+	text-transform: uppercase;
+}
 
 /* ----------------------------------------
 Forms
