--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ form {
 	 margin-bottom: 25px;
 }
 
-input, textarea {
+input, textarea,select {
 	border: 2px solid #dfdfdf;
     margin: 12px 0;
     padding: 10px 10px;
@@ -66,6 +66,12 @@ input, textarea {
 
 label {
 	text-align: left;
+}
+
+textarea {
+	width: 100%;
+	display: block;
+	height: 30vh;
 }
 
 /* ----------------------------------------
@@ -94,4 +100,12 @@ Layout
 #about {
 	border-bottom: 2px solid #dfdfdf;
 	margin: 45px 0;
+}
+
+.location {
+	margin: 15px 0 25px 0;
+}
+
+.location input {
+	margin: 0 10px;
 }
