--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ Layout
 .wrap {
 	background-color: #fff;
 	width: 50%;
-	margin: 0 auto;
+	margin: 50px auto;
 	padding: 30px 60px;
 }
 
@@ -108,4 +108,28 @@ Layout
 
 .location input {
 	margin: 0 10px;
+}
+
+#updates {
+	margin: 45px 0;
+}
+
+button {
+	float: left;
+		cursor: pointer;
+	outline: 0;
+	border: 2px solid #B69843;
+	color: #fff;
+	padding: 8px 25.5px;
+	background-color: #B69843;
+	font-weight: 500;
+	text-transform: uppercase;
+	font-size: 12.299px;
+	letter-spacing: 1.2px;
+	transition: all .3s ease-in-out;
+	border-radius: 5px;
+}
+
+.align-left {
+	text-align: left;
 }
